Bug 1254230 kinda-fix.  Make sure to never send script errors with stacks attached to the console service if the associated windows have already had FreeInnerObjects called on them.  r=bholley